<resources>
    <string name="app_name">DnevnjakApp</string>
    <string name="calendarNav">Calendar</string>
    <string name="dailyNav">Daily Tasks</string>
    <string name="userNav">User Profile</string>
    <string name="userProfile">User Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="logout">Logout</string>
    <string name="titlePlaceholder">TITLE PLACEHOLDER</string>
    <string name="startEndHrs">START - END HRS</string>
    <string name="currDatePlaceholder">Current date</string>
    <string name="obligationTitlePlaceholder">Show obligation title</string>
    <string name="obligationStartHrsEndHrs">StartHrs - EndHrs</string>
    <string name="obligationDescription">Task description</string>
    <string name="obligationButtonEdit">EDIT</string>
    <string name="obligationButtonDelete">DELETE</string>
    <string name="loginMessage">Please Login!</string>
    <string name="loginUsernameHint">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginButtonMessage">Login</string>
    <string name="monthOfYearPlaceholder">Month of year!</string>
    <string name="day1">MON</string>
    <string name="day2">TUE</string>
    <string name="day3">WED</string>
    <string name="day4">THU</string>
    <string name="day5">FRI</string>
    <string name="day6">SAT</string>
    <string name="day7">SUN</string>
    <string name="editTaskMessage">Edit task!</string>
    <string name="editTaskTitle">Task title</string>
    <string name="editTaskDescription">Task description</string>
    <string name="editTaskstartdate">Task start date</string>
    <string name="selectTaskstartdate">Select task start date</string>
    <string name="editTaskStartTime">Task start time</string>
    <string name="editTaskstarttimehint">Select task start time</string>
    <string name="editTaskendtime">Task end time</string>
    <string name="selectTaskendtime">Select task end time</string>
    <string name="selectTaskPriority">Task priority</string>
    <string name="priorityLow">Low</string>
    <string name="priorityMid">Mid</string>
    <string name="priorityHigh">High</string>
    <string name="editSaveButton">Save!</string>
    <string name="searchObligations">Search obligations</string>
    <string name="showPastObligations">Show past obligations</string>
    <string name="changeYourPassword">Change your password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="addNewTaskMessage">Add new task!</string>
    <string name="addNewTaskButton">Add!</string>
    <string name="selectTaskStartTime">Select task start time</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm New Password</string>
</resources>