<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:paddingTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNewTaskMessage"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTaskTitle"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/new_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editTaskTitle"
                android:textColorHint="#CCCCCC"
                android:textSize="18sp"
                android:textStyle="bold"
                android:inputType="textCapSentences" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTaskDescription"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/new_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editTaskDescription"
                android:textStyle="bold"
                android:textColorHint="#CCCCCC"
                android:textSize="16sp"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTaskStartTime"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/new_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/selectTaskStartTime"
                android:textColorHint="#CCCCCC"
                android:textSize="16sp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTaskendtime"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/new_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/selectTaskendtime"
                android:textColorHint="#CCCCCC"
                android:textSize="16sp"
                android:textStyle="italic"
                android:inputType="time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectTaskPriority"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <RadioGroup
                android:id="@+id/priority_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/new_priority_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priorityLow"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <RadioButton
                    android:id="@+id/new_priority_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priorityMid"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <RadioButton
                    android:id="@+id/new_priority_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priorityHigh"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </RadioGroup>
            <Button
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addNewTaskButton"
                android:backgroundTint="@color/login_blue"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>