<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeYourPassword"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/new_password_field"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/newPassword"
        android:inputType="textPassword"

        />

    <EditText
        android:id="@+id/new_password_confirm_field"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/confirmNewPassword"
        android:background="@drawable/custom_edittext"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:padding="10dp"/>

    <Button
        android:backgroundTint="@color/login_blue"
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/changePassword" />

</LinearLayout>
