<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/detailedTaskLayout"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/taskDateTextView"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/currDatePlaceholder"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obligationTitlePlaceholder"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:id="@+id/taskTitleTv"/>

        <TextView
            android:paddingTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obligationStartHrsEndHrs"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/taskDurationTv"/>

        <TextView
            android:id="@+id/taskDescriptionTv"
            android:paddingTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/obligationDescription"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/editCurrTaskBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFEB3B"
            android:text="@string/obligationButtonEdit"
            android:textColor="@color/black"/>

        <Button
            android:layout_marginLeft="50dp"
            android:id="@+id/deleteCurrTaskBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:text="@string/obligationButtonDelete"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>