<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userProfile"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_baseline_edit_24"
            android:padding="8dp"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="example@gmail.com"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="50dp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/change_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changePassword"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/login_blue"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/login_blue"/>

</RelativeLayout>